syntax = "proto3";
package productivity;

import "auth/user.proto";

message DeleteUserDataRequest {
    auth.User user = 1;
}

message DeleteUserDataResponse {
    bool success = 1;
}

service ProductivityService {
    rpc DeleteUserData(DeleteUserDataRequest) returns (DeleteUserDataResponse);
}